# platemate

./: .env.example  .gitignore  README.md  docker-compose.yml  flake.nix  platemate_components.html
.github/workflows/: ci.yml
db/scrape/: .env.example  .gitignore  USAGE.md  pyproject.toml
db/scrape/scraper/: checkpoint.py  config.py  heuristics.py  ingredient_matcher.py  logging_setup.py  main.py  models.py  parser.py  reddit_client.py  storage.py
db/scrape/scraper/llm/: __init__.py  anthropic.py  base.py  huggingface.py  openai_compat.py
db/scrape/tests/: test_checkpoint.py  test_config.py  test_heuristics.py  test_llm_providers.py  test_matcher.py  test_parser.py  test_reddit_client.py  test_storage.py
frontend/: .env.example  .gitignore  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  proxy.ts  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/hooks/: useWeeklyRecipes.ts
frontend/lib/: allergens.ts  auth-guard.ts  auth.ts  constants.ts  db.ts  ingredients.ts  landing-recipes.ts  rate-limit.ts  trending.ts  types.ts  validators.test.ts  validators.ts
frontend/prisma/: SEED.md  schema.prisma  seed.ts
frontend/public/: manifest.webmanifest
frontend/stores/: useHaveIngredientsStore.test.ts  useHaveIngredientsStore.ts  useServingStore.test.ts  useServingStore.ts
frontend/types/: next-auth.d.ts
robots/: Dockerfile  auth_middleware.js  data_pipeline.py  deploy_update.sh  kinematics.cpp  navigator.go  robot.c  session_manager.py
(+65 files in other folders)
