[project]
name = "platemate-scraper"
version = "0.1.0"
description = "Reddit recipe scraper for PlateMate"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[project.scripts]
platemate-scrape = "scraper.main:main"
